BGE: the movement of the mouse doesn't works well in the standalone player #42520

Closed
opened 2014-11-06 14:23:49 +01:00 by Danyl Bekhoucha · 12 comments

System Information
Windows 7, GTX 570

Blender Version
Blender 2.72

Short description of error

Apply a mouse look actuator at a camera and start the standalone player. The movements aren't always detected,.

To fix the bug i enable "Show Framerate and Profile".

**System Information** Windows 7, GTX 570 **Blender Version** Blender 2.72 **Short description of error** Apply a mouse look actuator at a camera and start the standalone player. The movements aren't always detected,. To fix the bug i enable "Show Framerate and Profile".

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @DanylBekhoucha

Added subscriber: @DanylBekhoucha

Added subscriber: @dfelinto

Added subscriber: @dfelinto

please attach a sample file (as simple as it may be)

please attach a sample file (as simple as it may be)
[camera_bug.7z](https://archive.blender.org/developer/F122270/camera_bug.7z)

Please use .blend, .zip or simple save the .blend with the compressed option. The 7zip file is not opening correctly here.

Please use .blend, .zip or simple save the .blend with the compressed option. The 7zip file is not opening correctly here.
[camera_bug.blend](https://archive.blender.org/developer/F122694/camera_bug.blend)
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

The issue is due to the following:

bge has a way to get/set the screen resolution using integers. This way when you want obtain the middle of the screen (i.e 1024x768 --> 512x384) from an odd resolution the final result is rounded (i.e 1025x769 --> 512.5 x 384.5 --> rounded to 513x385). Then you have to add an internal offset to avoid the effects of this rounding. Due to this it seems that the movements are not detected.

I'm trying to find a fix for this.

Bug to be merge with #42097

The issue is due to the following: bge has a way to get/set the screen resolution using integers. This way when you want obtain the middle of the screen (i.e 1024x768 --> 512x384) from an odd resolution the final result is rounded (i.e 1025x769 --> 512.5 x 384.5 --> rounded to 513x385). Then you have to add an internal offset to avoid the effects of this rounding. Due to this it seems that the movements are not detected. I'm trying to find a fix for this. Bug to be merge with #42097
Member

Fix added to differential: D946

Fix added to differential: [D946](https://archive.blender.org/developer/D946)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Jorge Bernal self-assigned this 2015-01-06 07:15:29 +01:00
Member

Closed by commit: ee58d44945

Closed by commit: ee58d44945
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42520
No description provided.